# dify-mcp-adapter

./: .gitignore  DIFY_INTEGRATION_GUIDE.md  LICENSE  README.md  demo.py  dify_plugin.py  main.py  manifest.yaml  pyproject.toml  requirements.txt  test_plugin.py
config/: __init__.py  logging_config.py  mcp_config.py  mcp_servers.json
endpoints/: __init__.py  dashboard.py
tests/: test_plugin_with_mock_registry.py
tools/: __init__.py  call_mcp_tool.py  fetch_enabled_tools.py  fetch_mcp_servers.py  fetch_tools_schema.py  manage_mcp_dashboard.py
